In order, readme, clienlibs, htl, lomobok dependency, sling model and test, content

--- a/pom.xml
+++ b/pom.xml
@@ -502,6 +502,13 @@
     <!-- ====================================================================== -->
     <dependencyManagement>
         <dependencies>
+            <!-- JAVA Libraries-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.4</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- OSGi Dependencies -->
             <dependency>
                 <groupId>org.osgi</groupId>
