--- a/core/pom.xml
+++ b/core/pom.xml
@@ -128,6 +128,10 @@ Bundle-DocURL:
         </dependency>
         <!-- Other Dependencies -->
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
